--- a/frontend/style.css
+++ b/frontend/style.css
@@ -9,8 +9,8 @@ body {
   justify-content: space-between;
   align-items: center;
   margin: 0 50px;
-  border-bottom: 1px solid rgb(67, 64, 64);
 }
+
 .shopName {
   font-size: 45px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -83,6 +83,8 @@ body {
 .reasonImg {
   width: 350px;
   height: 400px;
+  border-radius: 15px;
+  box-shadow: 8px 7px rgba(147, 134, 134, 0.288);
 }
 
 .reasonImg:hover {
@@ -136,7 +138,12 @@ button {
   margin-left: 50px;
   margin-top: 50px;
   border-radius: 10px;
-  box-shadow: 8px 6px rgba(204, 239, 149, 0.781);
+  box-shadow: 8px 6px rgba(164, 173, 149, 0.361);
+}
+
+.card2:hover {
+  transform: scale(1.05);
+  transition: all 0.3s ease-in-out;
 }
 
 .shoppingImg {
@@ -145,15 +152,21 @@ button {
   border-radius: 10px;
 }
 
+.box {
+  background-color: #dbf3b1;
+  padding: 1px;
+}
+
 .shoppingTitle,
 .shoppingPrice {
   font-size: 25px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: normal;
+  text-align: center;
 }
 
 .shoppingPrice {
-  font-size: 22px;
+  font-size: 24px;
   color: rgb(105, 105, 92);
 }
 
@@ -161,6 +174,113 @@ button {
   display: flex;
   justify-content: left;
   flex-wrap: wrap;
+}
+
+/* Product Details */
+.click_product {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.clickItemBox {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 100px 0;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+.imgBox {
+  width: 40%;
+}
+.clickImg {
+  width: 550px;
+  height: 700px;
+}
+
+.itemDetail {
+  width: 45%;
+}
+
+.clickItemDes {
+  font-size: 23px;
+}
+
+.clickItemPrice {
+  font-size: 26px;
+  color: rgb(225, 26, 83);
+}
+
+/* Cart Lists */
+.cartBox {
+  background-color: white;
+  padding: 30px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+.emptyCardDiv {
+  width: 700px;
+  margin: 0 auto;
+}
+
+.emptyCartImg {
+  width: 100%;
+  height: 600px;
+  margin: 0 auto;
+}
+
+.cartText {
+  font-size: 50px;
+  font-weight: normal;
+}
+
+.tol {
+  margin-left: 52%;
+}
+
+.btn2,
+.btn {
+  border-radius: 10px;
+  border: none;
+  background-color: #d7efad;
+  color: #000;
+  font-size: 26px;
+  box-shadow: 8px 8px #ceddb3;
+}
+
+.card1,
+.card3 {
+  width: 40%;
+}
+
+.cartDiv {
+  width: 1000px;
+  margin: 50px auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.cartImg {
+  width: 250px;
+  height: 250px;
+  border-radius: 15px;
+  box-shadow: 8px 6px #aeb5a4;
+}
+
+.cartName {
+  font-size: 25px;
+}
+
+.cartSpan {
+  font-size: 22px;
+}
+
+.comfrimBtn {
+  text-align: center;
+  margin-top: 50px;
 }
 
 /* Footer */
