--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -22,6 +22,17 @@ body {
   color: #000;
 }
 
+.haveCartItem {
+  width: 13px;
+  height: 13px;
+  border-radius: 100%;
+  background-color: green;
+  position: absolute;
+  top: 1px;
+  left: 40px;
+  display: none;
+}
+
 /* New Collections */
 .new_collections,
 .new_arrivals,
@@ -197,6 +208,8 @@ button {
 .clickImg {
   width: 550px;
   height: 700px;
+  border-radius: 24px;
+  box-shadow: 8px 8px rgba(134, 130, 130, 0.495);
 }
 
 .itemDetail {
@@ -277,6 +290,7 @@ button {
 
 .cartSpan {
   font-size: 22px;
+  margin-right: 3px;
 }
 
 .comfrimBtn {
@@ -284,7 +298,8 @@ button {
   margin-top: 50px;
 }
 
-.orderSuccess {
+.orderSuccess,
+.orderFail {
   width: 50%;
   margin: 0 auto;
   text-align: center;
@@ -295,9 +310,11 @@ button {
   color: rgb(39, 59, 65);
 }
 
-.successText {
+.successText,
+.failText {
   font-size: 30px;
 }
+
 /* Footer */
 .container {
   display: flex;
@@ -315,4 +332,22 @@ h4 {
   font-size: 33px;
   font-weight: normal;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.minus,
+.plus {
+  width: auto;
+  padding: 3px;
+  font-size: 25px;
+  background-color: #e4f3ca;
+  color: black;
+}
+
+.qty {
+  font-size: 20px;
+  margin: 0 3px;
+}
+
+.plusminus {
+  margin-bottom: 5px;
 }
